testsuite/tests/dependent/should_fail/T16326_Fail12.stderr

T16326_Fail12.hs:6:1: error: [GHC-51580]
    • Illegal visible, dependent quantification in the type of a term:
        forall a -> Show a
    • In the context: forall a -> Show a
      While checking the super-classes of class ‘C’
      In the class declaration for ‘C’
    Suggested fix: Perhaps you intended to use RequiredTypeArguments
